--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,6 +46,7 @@ function(add_floppy_example name source)
 endfunction()
 
 add_floppy_example(floppy_cli examples/cli.c)
+target_link_libraries(floppy_cli hardware_watchdog)
 add_floppy_example(floppy_selftest examples/selftest.c)
 add_floppy_example(floppy_diskdump examples/diskdump.c)
 add_floppy_example(floppy_mfmstats examples/mfmstats.c)
